[package]
name = "platform"
version = "1.0.0"
authors = ["Jacob Kiesel <kieseljake@gmail.com>"]
repository = "https://github.com/Xaeroxe/platform"
description = "Provides an easy way to inline selection of input parameters based on the platform being targeted."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/platform"

[dependencies]
